--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,10 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@500&family=Comforter+Brush&family=Lobster&family=Pacifico&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- CSS MAIN -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="color_fondo">
+<body class="color_fondo_contacto">
     <header>
         <!-- MENU CON BOOTSTRAP -->
         <nav class="navbar navbar-expand-lg bg-light nav_color">
@@ -24,13 +26,13 @@
                     </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link color_violeta" aria-current="page" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link color_violeta" href="./bibliografia.html">Bibliografia</a></li>
-                        <li class="nav-item"><a class="nav-link color_violeta" href="./contacto.html">Contacto</a></li>
-                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle color_violeta" href="./galeria.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Galeria</a>
+                        <li class="nav-item"><a class="nav-link color__letra" aria-current="page" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link color__letra" href="./bibliografia.html">Bibliografia</a></li>
+                        <li class="nav-item"><a class="nav-link color__letra" href="./contacto.html">Contacto</a></li>
+                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle color__letra" href="./galeria.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Galeria</a>
                             <ul class="dropdown-menu submenu_color">
-                                <li><a class="dropdown-item color_violeta" href="./galeria8.html">8</a></li>
-                                <li><a class="dropdown-item color_violeta" href="./galeria24.html">24</a></li>
+                                <li><a class="dropdown-item color__letra" href="./galeria8.html">8</a></li>
+                                <li><a class="dropdown-item color__letra" href="./galeria24.html">24</a></li>
                             </ul>
                     </ul>
                 </div>
@@ -59,9 +61,6 @@
         <p class="p_footer">Este sitio es NO OFICIAL y SIN FINES DE LUCRO,
             fué creado por un fan como parte de un proyecto académico.</p>
     </footer>
-    <!-- BOOTSTRAP -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
