se agrego title, description y keywords a las paginas

--- a/pages/galeria24.html
+++ b/pages/galeria24.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Galeria de Kobre Bryant usando el numero 24">
+    <meta name="keywords" content="magenes Kobe Bryant con el numero 24, Kobe bryan retiro">
+    <title>Kobe Bryant 8/24-Galeria 24</title>
     <!-- GOOGLE FONTS -->
     <link rel="icon" type="image/png" sizes="16x16" href="../img/logoProyecto/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
