--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Contactanos para saber mas sobre Kobe Bryan">
+    <meta name="keywords" content="contacto del blog de Kobe Bryant ">
+    <title>Kobe Bryant 8/24-Contacto</title>
     <!-- GOOGLE FONTS -->
     <link rel="icon" type="image/png" sizes="16x16" href="../img/logoProyecto/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
